--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-# Backend Dockerfile for Gatespy Analyzer
+# Backend Dockerfile for Gatespy Analyzer (Render-friendly)
 FROM python:3.11-slim
 
 ENV DEBIAN_FRONTEND=noninteractive
@@ -11,7 +11,6 @@ RUN apt-get update && apt-get install -y \
     chromium-driver \
     fonts-liberation \
     libnss3 \
-    libgconf-2-4 \
     libxss1 \
     libasound2 \
     curl \
@@ -27,6 +26,7 @@ COPY backend /app
 ENV CHROME_BIN=/usr/bin/chromium
 ENV CHROMEDRIVER_BIN=/usr/bin/chromedriver
 
+# Render sets PORT env var
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"]
