feat: add Dockerfile for Gatespy Analyzer backend deployment
Co-authored-by: Genie <genie@cosine.sh>

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: gatespy-analyzer
     env: docker
     plan: free
-    dockerfilePath: backend/Dockerfile
+    dockerfilePath: Dockerfile
     region: oregon
     healthCheckPath: /health
     autoDeploy: true
