--- a/web/package.json
+++ b/web/package.json
@@ -16,5 +16,10 @@
     "autoprefixer": "10.4.19",
     "lucide-react": "0.451.0",
     "swr": "2.2.5"
+  },
+  "devDependencies": {
+    "typescript": "5.6.2",
+    "@types/react": "18.3.4",
+    "@types/node": "20.11.30"
   }
 }
